gitops/apis/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: apis
  labels:
    app: apis
    app.kubernetes.io/part-of: system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apis
  template:
    metadata:
      labels:
        app: apis
    spec:
      containers:
        - name: apis
          image: 'quay.io/wael2000/apis:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
